<resources>
    <string name="app_name">Music store</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Music shop</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="number_of_items">Number of items</string>
    <string name="welcome_to_your_music_store">Welcome to your music store</string>
    <string name="cart">cart</string>

    <string name="sign_up">Sign Up</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="email_address">Email address</string>
    <string name="register_now">Register Now</string>
    <string name="sign_in">Sign In</string>
    <string name="log_in">LOG IN</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="login">LOGIN</string>
    <string name="to_login_page">Login to your existing account</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="welcome">Welcome to your homepage!</string>
    <string name="sign_out">Sign out</string>
    <string name="submit_order">Submit order</string>
    <string name="my_orders">My orders</string>
    <string name="id">ID :</string>
    <string name="total_number_of_items">Total number of items :</string>
    <string name="use_current_location">Use current location</string>
    <string name="confirm_location">Confirm location</string>
    <string name="location">Location :</string>
</resources>
